src/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Info_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Flight Info Id</label>
        <referenceTo>Flight_Info__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;Business&apos;, (Flight_Info_Id__r.Flight_Distance__c * (1.0- Contact__r.Discount__c)) / 13,(Flight_Info_Id__r.Flight_Distance__c * (1.0- Contact__r.Discount__c))/ 28)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                    <default>true</default>
                    <label>Booked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Economy</fullName>
        <active>true</active>
        <label>Economy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FlightInfoTime</fullName>
        <active>true</active>
        <errorConditionFormula>Flight_Info_Id__r.Date_time_of_Flight__c  &lt;=  NOW()</errorConditionFormula>
        <errorMessage>This flight started or finished</errorMessage>
    </validationRules>
</CustomObject>